# GrepUtility

./: CMakeLists.txt  Makefile  README.md  main.c
model/: grep_utility.c  grep_utility.h
